# phare.io-incident-api

./: FUNDING.yml  LICENSE  README.md  action.yml  pyproject.toml
.github/workflows/: ci.yml
incident_api/: __main__.py  client.py
src/incident_api/: __main__.py  client.py
tests/: test_incident_api.py
