[tool.poetry]
name = "incident-api"
version = "0.1.0"
description = "GitHub Action helper to manage Phare.io incidents from CI/CD"
authors = ["Roman Chutchev <RChutchev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
