[project]
name = "incident-api"
version = "0.1.0"
description = "GitHub Action helper to manage Phare.io incidents from CI/CD"
authors = [{ name = "Roman Chutchev", email = "RChutchev@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "requests>=2.31.0",
]

[dependency-groups]
dev = [
    "pytest>=5.2",
    "pyright",
]

[build-system]
requires = ["uv-build>=0,<0.2"]
build-backend = "uv_build"

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false
venvPath = "."
venv = ".venv"
